<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>
    <string name="signInTabTitle">Sign In</string>
    <string name="signUpTabTitle">Sign Up</string>
    <string name="title_compose_tweet">Compose tweet</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="profile_desc">Profile</string>
    <string name="icon_desc">Icon</string>
    <string name="search_desc">Search</string>

    <string name="input_alias">alias</string>
    <string name="input_password">password</string>
    <string name="input_first_name">first name</string>
    <string name="input_last_name">last name</string>
    <string name="input_image_url">image url</string>
    <string name="input_search_hint">kirk</string>

    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_follow">Follow</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="button_logout">Logout</string>
    <string name="button_share">Share</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_loading">Loading</string>
    <string name="default_image_url">https://cs340-tweeter.s3-us-west-2.amazonaws.com/profile-pics/jg.jpg</string>
</resources>
